[package]
name = "one-password-interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.6", features = ["tokio", "headers"] }
tokio = { version = "1.29", features = ["full"] }
tower = "0.4.13"
